# hd-poker-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  todo.md
holdem_coach/: __init__.py  __main__.py  app.py  cli.py  config.py  handhistory.py
holdem_coach/analysis/: __init__.py  equity.py  odds.py  ranges.py  scorer.py
holdem_coach/capture/: __init__.py  button.py  cards.py  changegate.py  grabber.py  interpret.py  layout.py  live.py  ocr.py  overlay.py  pipeline.py  recorder.py  tablestate.py  tracker.py  viewer.py  window.py
holdem_coach/coaching/: __init__.py  coach.py
packaging/: build_exe.ps1  holdem_coach_gui.py
sample_hands/: hand1_preflop_mistake.json  hand2_pot_odds.json  hand3_clean_line.json
tests/: conftest.py  test_button.py  test_capture_window.py  test_cards.py  test_changegate.py  test_coaching.py  test_config.py  test_equity.py  test_handhistory.py  test_interpret.py  test_odds.py  test_ranges.py  test_scorer.py  test_tracker.py
