[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-coach"
version = "0.1.0"
description = "Post-hand study coach for Texas Hold'em (HD Poker, play money). No real-time assistance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "treys>=0.1.8",
]

[project.optional-dependencies]
coaching = ["anthropic>=0.40"]
capture = ["mss>=9", "opencv-python>=4.9", "pytesseract>=0.3"]
dev = ["pytest>=8"]
build = ["pyinstaller>=6"]

[project.scripts]
holdem-coach = "holdem_coach.cli:main"

[project.gui-scripts]
# No console window on Windows when launched via this entry point.
holdem-coach-gui = "holdem_coach.app:main"

[tool.setuptools.packages.find]
include = ["holdem_coach*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
