[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-coach"
version = "0.1.0"
description = "Post-hand study coach for Texas Hold'em (HD Poker, play money). No real-time assistance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "treys>=0.1.8",
]

[project.optional-dependencies]
coaching = ["anthropic>=0.40"]
capture = ["mss>=9", "opencv-python>=4.9", "numpy>=1.26", "rapidocr-onnxruntime>=1.4"]
# GPU OCR (optional, big speedup). These REPLACE the CPU onnxruntime that
# rapidocr-onnxruntime pulls in — install one, then uninstall plain onnxruntime:
#   pip uninstall onnxruntime -y && pip install -e ".[gpu-directml]"
# The OCR engine auto-detects and uses the GPU provider when present (ocr.py).
gpu-directml = ["onnxruntime-directml>=1.17"]   # any DX12 GPU, no CUDA needed
gpu-cuda = ["onnxruntime-gpu>=1.17"]            # NVIDIA, needs CUDA 12 + cuDNN 9
dev = ["pytest>=8"]
build = ["pyinstaller>=6"]

[project.scripts]
holdem-coach = "holdem_coach.cli:main"

[project.gui-scripts]
# No console window on Windows when launched via this entry point.
holdem-coach-gui = "holdem_coach.app:main"

[tool.setuptools.packages.find]
include = ["holdem_coach*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
